part 1/flask app/main app/manifest/pingpong_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pong-app
spec:
  replicas: 1
  selector: #matches all labels app: xxx to create connection (i.e. selectors match with labels)
    matchLabels:
      app: pong
  # config for a pod
  template:
    metadata:
      labels:
        app: pong
    spec: 
      volumes:
      - name: shared-counter
        persistentVolumeClaim:
          claimName: counter-claim
      containers:
      - name: pong
        image: xzarem/pong@sha256:9a6d80c3e16dcb55c50f46fcad1064d5bf5df439f9dd0103e7fe44eae3b261f6
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /usr/src/app/files
          name: shared-counter
---
apiVersion: v1
kind: Service
metadata:
  name: pong-app-service
spec:
  selector:
    app: pong
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 5000
